	  required fields and account fields.
	* Moved more dialogs to the request API for interface consistency
	  (Send Message, Get User Info, and Insert Link dialogs)
	* Jabber file transfer
	* IRC file transfer (Tim Ringenbach)
	* Added a hidden preference for disabling buddy list tooltips or
	  changing the pop-up delay in prefs.xml.
	* Moved translation news to po/ChangeLog

	Bug Fixes:
	* Significant work on the Zephyr plugin (Arun A. Tharuvai)
	* You can now use :/ as a smiley safely (Nathan Owens)
	* Various buffer overflow fixes (Stefan Esser)
	* Tabs now stay green when they are supposed to (Etan Reisner)
	* Fixed a bug where only the first user in a chat room list was removed
	  sometimes when trying to remove a group of users (Tim Ringenbach)
	* Clearing an AIM buddy icon actually removes it from the server,
	  icons changes in the account editor do not take effect if the
	  cancel button is used (Stu Tomlinson)
	* Improved chat parting logic (Tim Ringenbach)
	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
	* Deleting an account while modifying it will no longer crash gaim.
	* Only one account preference window will now appear per account when
	  clicking Modify.
	* Aliases are now shown alongside the screen name in the message
	  queue window. (Kevin Stange).
	* TCL Plugin API changed
	* The mobile icon on MSN users is now removed when the person disables
	  mobile paging (Stu Tomlinson)
	* Removing invalid buddies in MSN with a space in their name no longer
	  causes a disconnect (Stu Tomlinson)
	* Multiple MSN chats should now work (Robert Mibus)
	* Added new MSN error codes and fixed an incorrect one (Stu Tomlinson)
	* Incoming colors are now processed correctly in MSN.
	* Conversation placement by account now works correctly with both
	  chats and IMs, and takes the Combine Chats and IMs option into
	  consideration.
	* Minor tweaks to the list box in the multi-field request dialogs